# io-handles

./: COPYRIGHT  Cargo.toml  README.md
examples/: copy.rs  hello-world.rs
src/: descriptor.rs  lib.rs  lockers.rs  posish.rs  read_write.rs  winx.rs
src/buffered/: buf_reader_line_writer.rs  buf_reader_line_writer_shim.rs  buf_reader_writer.rs  mod.rs
tests/: buffered.rs  tests.rs
