[package]
name = "io-handles"
version = "0.0.0"
description = "Unbuffered and unlocked I/O streams"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["io"]
categories = ["rust-patterns"]
repository = "https://github.com/sunfishcode/io-handles"
readme = "README.md"

[build-dependencies]
rustc_version = "0.3.0"

[dependencies]
memchr = "2.3.4"
once_cell = "1.3.1"
parking = "2.0.0"

# WASI doesn't support pipes yet
[target.'cfg(not(target_os = "wasi"))'.dependencies]
os_pipe = "0.9.2"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.81"

[dev-dependencies]
anyhow = "1.0.35"
tempfile = "3.1.0"

[badges]
maintenance = { status = "actively-developed" }
